--- a/04-DOM-manipulation-event-handling/single-elements.html
+++ b/04-DOM-manipulation-event-handling/single-elements.html
@@ -27,6 +27,9 @@
 
       document.getElementById("title").innerText = "Todo App";
       document.getElementById("title").innerHTML = "<p>Todo App</p>";
+
+      sonuc = document.querySelector("#title");
+      sonuc = document.querySelector(".cart-header");
       console.log(sonuc);
     </script>
   </body>
