--- a/04-DOM-manipulation-event-handling/single-elements.html
+++ b/04-DOM-manipulation-event-handling/single-elements.html
@@ -7,46 +7,32 @@
   </head>
   <body>
     <div class="card-header">
-      <h3 class="cart-title h1" id="title">Todo App 2</h3>
+      <h3 class="card-title h1" id="title" style="color: red; font-size: 32px;">
+        Todo App
+      </h3>
     </div>
     <ul>
       <li>
-        Görev 1
+        ul Görev 1
       </li>
       <li>
-        Görev 2
+        ul Görev 2
       </li>
       <li>
-        Görev 3
+        ul Görev 3
       </li>
     </ul>
-    <script>
-      let sonuc;
-
-      sonuc = document.getElementById("title");
-      sonuc = document.getElementById("title").id;
-      sonuc = document.getElementById("title").className;
-      sonuc = document.getElementById("title").classList;
-
-      document.getElementById("title").style.fontSize = "50px";
-      document.getElementById("title").style.color = "pink";
-      document.getElementById("title").style.classList;
-
-      document.getElementById("title").style.fontSize = "50px";
-      document.getElementById("title").style.color = "pink";
-      //document.getElementById("title").style.display = "none"; - sayfada görünmez ama konsolda görnünür
-
-      document.getElementById("title").innerText = "Todo App";
-      document.getElementById("title").innerHTML = "<p>Todo App</p>";
-
-      sonuc = document.querySelector("#title"); // #-id nokta ile de class
-      sonuc = document.querySelector(".cart-header");
-      sonuc = document.querySelector("div");
-
-      sonuc = document.querySelector("li");
-      sonuc = document.querySelector("li:first-child");
-      sonuc = document.querySelector("li:last-child");
-      console.log(sonuc);
-    </script>
+    <ol>
+      <li>
+        ol Görev 1
+      </li>
+      <li>
+        ol Görev 2
+      </li>
+      <li>
+        ol Görev 3
+      </li>
+    </ol>
+    <script src="single-elements-script.js"></script>
   </body>
 </html>
