--- a/04-DOM-manipulation-event-handling/to-do-calisma.html
+++ b/04-DOM-manipulation-event-handling/to-do-calisma.html
@@ -10,6 +10,55 @@
         color: gray;
         opacity: 0.7;
       }
+      body {
+        font-family: sans-serif;
+        background-color: #f3f3f3;
+        padding: 30px;
+      }
+      form {
+        margin-bottom: 20px;
+      }
+      input {
+        padding: 8px;
+        font-size: 16px;
+        width: 250px;
+      }
+      button {
+        padding: 8px 16px;
+        font-size: 16px;
+        width: 250px;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+      }
+      li {
+        background-color: white;
+        padding: 10px;
+        margin-bottom: 10px;
+        border-radius: 6px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .silBtn {
+        background-color: crimson;
+        color: white;
+        border: none;
+        border-radius: 1;
+      }
+      .silBtn:hover {
+        background-color: darked;
+      }
+      .tamamlandi {
+        text-decoration: line-through;
+        color: gray;
+        opacity: 0.7;
+      }
+      .gorevMetni {
+        flex: 1;
+        cursor: pointer;
+      }
     </style>
   </head>
 
