load-first-slide

--- a/slider-application/index.html
+++ b/slider-application/index.html
@@ -36,5 +36,6 @@
       src="https://kit.fontawesome.com/9a85e2ec66.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
