--- a/slider-application/index.html
+++ b/slider-application/index.html
@@ -10,6 +10,11 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+    <style>
+      .fas {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div class="container mt-2">
