--- a/05-async-await/mini-uygulama/index.html
+++ b/05-async-await/mini-uygulama/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>try/catch + async/await demo</title>
+    <title>ry/catch + async/await demo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,8 +14,7 @@
         <button id="btn">Getir</button>
       </div>
       <div id="status" class="status"></div>
-      <!-- burada hata vardı -->
-      <pre id="result"></pre>
+      <pre id="" result></pre>
     </div>
     <script src="script.js"></script>
   </body>
