add-favorite-pic

--- a/05-async-await/kedi-foto-uygulamasi/index.html
+++ b/05-async-await/kedi-foto-uygulamasi/index.html
@@ -10,8 +10,15 @@
     <div>
       <h1>Tatli Kediii Fotileriii</h1>
       <button id="btn">Kedi Fotoğrafı Getir:</button>
+      <button id="showFavs">❤️ Favoriler</button>
       <img id="cat" src="" alt="Kediş" />
-      <label id="status" for=""></label>
+      <button id="favBtn">❤️</button>
+      <label id="status"></label>
+
+      <div id="favorites" style="display:none; margin-top:20px">
+        <h2>Favorilerim</h2>
+        <div id="favList"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
